@@ -16,7 +16,10 @@ Changes for bugfix release 1.0.2:
   contributed by Trent with suggestion by UngarPeter
   based on work by TomScanlan
 * fixed bug ActionLinksExistsZeroSubPage aka RequestedLinks
-  fix contributed by GyPark and MikeCastle
+  based on fix by GyPark and MikeCastle
+* fixed bug ImageExtensionsCaseSensitive aka
+  UppercaseImageUploadCausesProblemsWithDisplay
+* added ico/tif/tiff to ImageExtensions
 
 Changes for bugfix release 1.0.1 (July 9, 2007):
 
